force-app/main/default/objects/FSM_Asset_Transaction_Log__e/FSM_Asset_Transaction_Log__e.object-meta.xml
<CustomObject>
    <description>The purpose of this platform event is to create Asset Transaction Logs once the Asset Actions are completed</description>
    <label>FSM Asset Transaction Log</label>
    <pluralLabel>FSM Asset Transaction Logs</pluralLabel>
</CustomObject>