force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Id__c</fullName>
    <description>Purpose of this field is to find the Asset associated to the transaction log when triggered off the Asset</description>
    <label>Asset Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>