force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Asset_Placement__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Asset_Placement__c</fullName>
    <label>Asset Placement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>