force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Installed_Asset_SN__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Installed_Asset_SN__c</fullName>
    <label>Installed Asset SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>