force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Location_Id__c</fullName>
    <label>Location Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>