force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Log_Error__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Log_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purpose of this field is to update Inventory Transaction Failure Root Cause if a Serialized Product is not found.</description>
    <label>Log Error</label>
    <type>Checkbox</type>
</CustomField>