force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Method_of_Creation__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Method_of_Creation__c</fullName>
    <label>Method of Creation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>