force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Product_ID__c</fullName>
    <description>ID of Product</description>
    <label>Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>