force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>