force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Removal_Disposition__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Removal_Disposition__c</fullName>
    <label>Removal Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>