force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Removed_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Removed_Product_Id__c</fullName>
    <description>Removed Asset&apos;s Product Id</description>
    <label>Removed Product Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>