force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Status__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>