force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>