force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_Transaction_Type__c</fullName>
    <description>Rework status change or location change</description>
    <label>Transaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>