force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_WOLI_Error__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_WOLI_Error__c</fullName>
    <description>Used for populating the WOLI Error from the Asset Transaction Log. This is passed from the Asset Action Platform Event</description>
    <label>WOLI Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>