force-app/main/default/objects/FSM_Asset_Transaction_Log__e/fields/MS_FSM_WOLI_Id__c.field-meta.xml
<CustomField>
    <fullName>MS_FSM_WOLI_Id__c</fullName>
    <description>Purpose of this field is to pass in the WOLI Id to the Platform Event</description>
    <label>WOLI Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>